--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -48,3 +48,7 @@ jobs:
         run: |
           flutter build apk
           flutter build appbundle
+      - uses: actions/upload-artifact@v3
+        with:
+          name: DramatisP.apk
+          path: build/app/outputs/flutter-apk/app-release.apk
