--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -51,4 +51,4 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: DramatisP.apk
-          path: ../build/app/outputs/flutter-apk/app-release.apk
+          path: app/build/app/outputs/flutter-apk/app-release.apk
