--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -26,7 +26,10 @@ jobs:
           java-version: '11'
       - uses: subosito/flutter-action@v2
         with:
-          channel: 'stable' # or: 'beta' 
+          channel: 'stable' # or: 'beta'
+          cache: true
+          cache-key: flutter # optional, change this to force refresh
+          cache-path: ${{ runner.tool_cache }}/flutter # optional 
 
       - name: Install dependencies
         run: flutter pub get
